--- a/app/class-introduction.html
+++ b/app/class-introduction.html
@@ -9,12 +9,12 @@ current: index
 
 <div class="container special-class mb-9">
     <div class="row" data-aos="fade-up">
-        <div class="offset-md-1 col-6">
+        <div class="offset-lg-1 col-6">
             <div class="card-img bg-cover rounded-lg"
                 style="background-image: url(./assets/images/photo-1540206276207-3af25c08abc4.jpeg);">
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-6 col-lg-4">
             <h3 class="text-dark-brick-red">本月限定課程 - 空中瑜珈</h3>
             <div class="d-flex align-items-baseline mb-3">
                 <h6 class="text-brick-red me-2">授課老師：Carol Tang</h6>
@@ -37,7 +37,7 @@ current: index
 <div class="class-select bg-brick-red py-3" data-aos="fade-up">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-5 col-lg-4">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="請輸入要搜尋的課程" aria-label="Username"
                         aria-describedby="basic-addon1">
@@ -64,9 +64,9 @@ current: index
 <div class="class-information mt-7">
     <div class="container">
         <div class="row">
-            <div class="col-9">
+            <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#" data-bs-toggle="modal" role="button" data-bs-target="#exampleModal">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
@@ -79,7 +79,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
@@ -94,7 +94,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
@@ -107,7 +107,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -122,7 +122,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg);">
@@ -135,7 +135,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
@@ -150,7 +150,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ pants\ bending\ her\ body\ by\ the\ window.jpg);">
@@ -163,7 +163,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-6 col-lg-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent  text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);">
@@ -178,25 +178,27 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-3" data-aos="fade-up">
-                <h5 class="text-dark-brick-red">DOYOGA 上課須知：</h5>
-                <ul class="text-dark-brick-red list-unstyled">
-                    <li class="mb-1">
-                        <h6>請攜帶適當的瑜珈墊和一條長毛巾配合課程使用。</h6>
-                    </li>
-                    <li class="mb-1">
-                        <h6>運動中請穿著有彈性、吸汗、透氣為原則的衣物，盡量穿著較貼身的運動衣，以便教練指導與自我矯正。</h6>
-                    </li>
-                    <li class="mb-1">
-                        <h6>運動中切記補充適當的水分、保持腹式呼吸，以鼻吸氣，以口呼氣為原則。</h6>
-                    </li>
-                    <li class="mb-1">
-                        <h6>運動中請保持微收小腹的原則，肩膀放鬆、頭頂向上延伸，請跟隨教練指示，配合呼吸一步步的確實練習。</h6>
-                    </li>
-                    <li class="mb-1">
-                        <h6>運動過程中若感到任何不適，請馬上停止且與老師商量討論。 若懷孕或特殊疾病請先告知。</h6>
-                    </li>
-                </ul>
+            <div class="offset-3 offset-lg-0 col-6 col-lg-3" data-aos="fade-up">
+                <div class="d-flex flex-column align-items-center">
+                    <h5 class="text-dark-brick-red">DOYOGA 上課須知：</h5>
+                    <ul class="text-dark-brick-red list-unstyled">
+                        <li class="mb-1">
+                            <h6>請攜帶適當的瑜珈墊和一條長毛巾配合課程使用。</h6>
+                        </li>
+                        <li class="mb-1">
+                            <h6>運動中請穿著有彈性、吸汗、透氣為原則的衣物，盡量穿著較貼身的運動衣，以便教練指導與自我矯正。</h6>
+                        </li>
+                        <li class="mb-1">
+                            <h6>運動中切記補充適當的水分、保持腹式呼吸，以鼻吸氣，以口呼氣為原則。</h6>
+                        </li>
+                        <li class="mb-1">
+                            <h6>運動中請保持微收小腹的原則，肩膀放鬆、頭頂向上延伸，請跟隨教練指示，配合呼吸一步步的確實練習。</h6>
+                        </li>
+                        <li class="mb-1">
+                            <h6>運動過程中若感到任何不適，請馬上停止且與老師商量討論。 若懷孕或特殊疾病請先告知。</h6>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -299,15 +301,15 @@ current: index
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="modal-content container py-9 px-8 bg-brick-red rounded-lg">
-                    <div class=" row">
+            <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-width">
+                <div class="modal-content container-lg py-9 px-8 bg-brick-red rounded-lg">
+                    <div class="row">
                         <div class="col-6">
                             <div class="bg-cover rounded-lg w-100"
                                 style="background-image: url(./assets/images/photo-1540206276207-3af25c08abc4.jpeg); height: 418px;">
                             </div>
                         </div>
-                        <div class="col-6 p-7">
+                        <div class="col-6 px-3 px-lg-7 py-7">
                             <h3 class="text-white">基礎 Basic</h3>
                             <div class="d-flex align-items-baseline mb-3">
                                 <h6 class="text-white me-2">授課老師：Carol Tang</h6>
