--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@ current: index
         <h3 class="text-center text-dark-brick-red mb-1" data-aos="fade-up">感受身心，活在當下</h3>
         <h5 class="text-center text-brick-red mb-6" data-aos="fade-up">DOYOGA 可以帶給你...</h5>
         <div class="row">
-            <div class="col-4" data-aos="fade-up">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1593810450967-f9c42742e326.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -35,7 +35,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up" data-aos-delay="200">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1593810451137-5dc55105dace.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -44,7 +44,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4" data-aos="fade-up" data-aos-delay="400">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up" data-aos-delay="400">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1599901860904-17e6ed7083a0.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -59,7 +59,7 @@ current: index
 
 <div class="teacher-info bg-beige py-9">
     <div class="container position-lg-relative d-flex">
-        <div class="row w-100" data-aos="fade-up">
+        <div class="row" data-aos="fade-up">
             <div class="col-lg-6">
                 <div class="card-img d-none d-lg-block rounded-lg position-lg-relative"></div>
             </div>
@@ -72,9 +72,9 @@ current: index
                         </div>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <ul class="list-unstyled d-flex flex-column align-items-end col-11 col-lg-12">
+                        <ul class="list-unstyled d-flex flex-column align-items-end col-12 col-sm-11 col-lg-12">
                             <li
-                                class="bg-white teacher-card-item-lg d-flex align-items-center rounded-lg py-7 px-8 mb-4">
+                                class="bg-white teacher-card-item-lg d-flex align-items-center rounded-lg py-7 px-6 px-sm-8 mb-4">
                                 <img src="./assets/images/teacher-1.png" alt="" class="teacher-pic me-4">
                                 <div class="teacher-card-body">
                                     <h5 class="text-gray">Carol Tang 老師</h5>
@@ -106,12 +106,12 @@ current: index
 
 <div class="environment-introduct py-9">
     <div class="container">
-        <div class="row">
-            <div class="col-4" data-aos="fade-right">
+        <div class="row d-flex flex-column flex-sm-row">
+            <div class="col-12 col-sm-4 order-2 order-sm-1" data-aos="fade-right">
                 <div class="card-img-lg bg-cover rounded-lg "
                     style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);"></div>
             </div>
-            <div class="col-2">
+            <div class="col-2 order-3 order-sm-2 d-none d-sm-block">
                 <div class="card-img-md bg-cover rounded-lg mb-5"
                     style="background-image: url(./assets/images/white\ round\ table\ near\ brown\ wooden\ chair.jpg);"
                     data-aos="fade-left" data-aos-delay="100">
@@ -121,8 +121,8 @@ current: index
                     data-aos="fade-left" data-aos-delay="200">
                 </div>
             </div>
-            <div class="col-6 col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-left"
-                data-aos-delay="400">
+            <div class="col-12 col-sm-6 col-lg-5 d-flex flex-column justify-content-center order-1 order-sm-3 mb-3 mb-sm-0"
+                data-aos="fade-left" data-aos-delay="400">
                 <h3 class="text-dark-brick-red mb-1">舒適空間、靜心放鬆</h3>
                 <h5 class="text-brick-red mb-4">我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。</h5>
                 <a href="class-environment.html" class="text-dark-brick-red introduct-btn h6">環境介紹<span><i
@@ -134,11 +134,12 @@ current: index
 
 <div class="course-introduct bg-beige py-9">
     <div class="container">
-        <div class="row">
-            <div class="col-6 col-lg-5 d-flex flex-column justify-content-center offset-lg-1" data-aos="fade-right">
+        <div class="row d-flex flex-column flex-sm-row">
+            <div class="col-12 col-sm-6 col-lg-5 d-flex flex-column justify-content-center offset-lg-1 order-1"
+                data-aos="fade-right">
                 <h3 class="text-dark-brick-red mb-1">精心設計、課程多元</h3>
                 <h5 class="text-brick-red mb-4">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</h5>
-                <a href="class-introduction.htmlㄌ" class="text-dark-brick-red introduct-btn">課程介紹<span><i
+                <a href="class-introduction.htmlㄌ" class="text-dark-brick-red introduct-btn mb-3 mb-sm-0">課程介紹<span><i
                             class="fas fa-arrow-right fa-arrow"></i></span></a>
             </div>
             <div class="col-5 d-none d-lg-block" data-aos="fade-left">
@@ -173,7 +174,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-6 d-lg-none">
+            <div class="col-12 col-sm-6 d-lg-none order-2 px-4 px-sm-0">
                 <div class="row">
                     <div class="col card-img rounded-lg bg-cover me-5 mb-4" data-aos="fade-left"
                         style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);"></div>
@@ -254,10 +255,112 @@ current: index
 <div class="recommend bg-beige">
     <div class="container pt-7 pb-9">
         <h3 class="text-dark-brick-red text-center mb-6" data-aos="fade-up">聽聽他們怎麼說</h3>
-        <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events">
+        <div class="d-none d-lg-block">
+            <div class="row mb-3">
+                <div class="col-4" data-aos="fade-up">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/user-1.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/user-2.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">穎旻 Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">上課後身體健康很多</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/user-3.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">子琪 Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">上課很有趣！</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/user-4.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">葉子 Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">老師的教學很專業</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/user-5.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">Ray Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">很舒壓</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
+                        <div class="user-img" style="background-image: url(./assets/images/uset-6.png);"></div>
+                        <div class="card-body p-0">
+                            <p class="text-dark-brick-red mb-11">俊儀 Oct 17 2020</p>
+                            <h5 class="star text-brick-red mb-11">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </h5>
+                            <h6 class="text-dark-brick-red">讚的！</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events d-block d-lg-none">
             <div class="swiper-wrapper" id="swiper-wrapper-3df8fba100ec83b4f" aria-live="polite">
                 <div class="swiper-slide swiper-slide-active mb-3" role="group" aria-label="1 / 6"
-                    style="width: 350px; margin-right: 30px;">
+                    style="width: 350px; margin-right: 30px;" data-aos="fade-left">
                     <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                         <div class="user-img" style="background-image: url(./assets/images/user-1.png);"></div>
                         <div class="card-body p-0">
@@ -274,7 +377,7 @@ current: index
                     </div>
                 </div>
                 <div class="swiper-slide swiper-slide-next mb-3" role="group" aria-label="2 / 6"
-                    style="width: 350px; margin-right: 30px;">
+                    style="width: 350px; margin-right: 30px;" data-aos="fade-left">
                     <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                         <div class="user-img" style="background-image: url(./assets/images/user-2.png);"></div>
                         <div class="card-body p-0">
@@ -359,106 +462,3 @@ current: index
         </div>
     </div>
 </div>
-
-
-
-<!-- <div class="row mb-3">
-    <div class="col-4" data-aos="fade-up">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/user-1.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-4" data-aos="fade-up" data-aos-delay="100">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/user-2.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">穎旻 Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">上課後身體健康很多</h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-4" data-aos="fade-up" data-aos-delay="200">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/user-3.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">子琪 Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">上課很有趣！</h6>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-4" data-aos="fade-up" data-aos-delay="300">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/user-4.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">葉子 Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">老師的教學很專業</h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-4" data-aos="fade-up" data-aos-delay="400">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/user-5.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">Ray Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">很舒壓</h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-4" data-aos="fade-up" data-aos-delay="500">
-        <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
-            <div class="user-img" style="background-image: url(./assets/images/uset-6.png);"></div>
-            <div class="card-body p-0">
-                <p class="text-dark-brick-red mb-11">俊儀 Oct 17 2020</p>
-                <h5 class="star text-brick-red mb-11">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </h5>
-                <h6 class="text-dark-brick-red">讚的！</h6>
-            </div>
-        </div>
-    </div>
-</div> -->
