--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -23,59 +23,134 @@ current: index
 
 <div class="course-select">
     <div class="container">
-        <ul class="list-unstyled row">
-            <li class="col-4" data-aos="fade-up">
-                <div class="card rounded-lg course-card">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">首次體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $450 / 次</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
-                        </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="reserve-class-select.html" role="button"
-                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="col-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="card rounded-lg course-card">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">短期體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $1800 / 月</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
-                        </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" role="button"
-                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+        <div class="d-none d-lg-block">
+            <ul class="list-unstyled row">
+                <li class="col-4" data-aos="fade-up">
+                    <div class="card rounded-lg course-card">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">首次體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $450 / 次</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="reserve-class-select.html" role="button"
+                                    class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-            <li class="col-4" data-aos="fade-up" data-aos-delay="400">
-                <div class="card rounded-lg course-card">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">長期體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $5600 / 季</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
-                        </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" role="button"
-                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                </li>
+                <li class="col-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card rounded-lg course-card">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">短期體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $1800 / 月</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="#" role="button"
+                                    class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+                <li class="col-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="card rounded-lg course-card">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">長期體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $5600 / 季</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="#" role="button"
+                                    class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="d-lg-none">
+            <ul class="list-unstyled row">
+                <li class="col-12">
+                    <div class="card mb-4 rounded-lg overflow-hidden">
+                        <div class="row g-0">
+                            <div class="col-md-6 rounded-lg">
+                                <img class="card-img-top bg-cover d-block h-100"
+                                    style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body p-4">
+                                    <div class="card-word">
+                                        <h5 class="card-title text-dark-brick-red mb-1">首次體驗</h5>
+                                        <h5 class="card-title text-brick-red mb-2">NT $450 / 次</h5>
+                                        <h6 class="card-text text-dark-brick-red mb-4">分基礎、中級、高級可以選擇。初次至 DOYOGA
+                                            上課建議選擇此方案。
+                                        </h6>
+                                    </div>
+                                    <div class="card-footer border-0 bg-transparent p-0">
+                                        <a href="reserve-class-select.html" role="button"
+                                            class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 rounded-lg overflow-hidden">
+                        <div class="row g-0">
+                            <div class="col-md-6">
+                                <img class="card-img-top bg-cover d-block h-100"
+                                    style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body p-4">
+                                    <div class="card-word">
+                                        <h5 class="card-title text-dark-brick-red mb-1">短期體驗</h5>
+                                        <h5 class="card-title text-brick-red mb-2">NT $1800 / 月</h5>
+                                        <h6 class="card-text text-dark-brick-red mb-4">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。
+                                        </h6>
+                                    </div>
+                                    <div class="card-footer border-0 bg-transparent p-0">
+                                        <a href="#" role="button"
+                                            class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card rounded-lg overflow-hidden">
+                        <div class="row g-0">
+                            <div class="col-md-6 rounded-lg">
+                                <img class="card-img-top bg-cover d-block h-100"
+                                    style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body p-4">
+                                    <div class="card-word">
+                                        <h5 class="card-title text-dark-brick-red mb-1">長期體驗</h5>
+                                        <h5 class="card-title text-brick-red mb-2">NT $5600 / 季</h5>
+                                        <h6 class="card-text text-dark-brick-red mb-4">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。
+                                        </h6>
+                                    </div>
+                                    <div class="card-footer border-0 bg-transparent p-0">
+                                        <a href="#" role="button"
+                                            class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
