--- a/app/reserve-class-select.html
+++ b/app/reserve-class-select.html
@@ -23,59 +23,90 @@ current: index
 
 <div class="course-select">
     <div class="container">
-        <ul class="list-unstyled row">
-            <li class="col-4">
-                <div class="card rounded-lg course-card border border-brick-red border-4">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">首次體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $450 / 次</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
+        <div class="d-none d-lg-block">
+            <ul class="list-unstyled row">
+                <li class="col-4">
+                    <div class="card rounded-lg course-card border border-brick-red border-4">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">首次體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $450 / 次</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="#" role="button"
+                                    class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
                         </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" role="button"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                    </div>
+                </li>
+                <li class="col-4">
+                    <div class="card rounded-lg course-card">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">短期體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $1800 / 月</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="#" role="button"
+                                    class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="col-4">
+                    <div class="card rounded-lg course-card">
+                        <img class="card-img-top card-img bg-cover d-block"
+                            style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
+                        <div class="card-body p-4 d-flex flex-column justify-content-between">
+                            <div class="card-word">
+                                <h5 class="card-title text-dark-brick-red text-center">長期體驗</h5>
+                                <h5 class="card-title text-brick-red text-center">NT $5600 / 季</h5>
+                                <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
+                            </div>
+                            <div class="card-footer border-0 bg-transparent p-0">
+                                <a href="#" role="button"
+                                    class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="d-lg-none">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card mb-4 rounded-lg overflow-hidden border border-brick-red border-4">
+                        <div class="row g-0">
+                            <div class="col-md-6 rounded-lg">
+                                <img class="card-img-top bg-cover d-block h-100"
+                                    style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body p-4">
+                                    <div class="card-word">
+                                        <h5 class="card-title text-dark-brick-red mb-1">首次體驗</h5>
+                                        <h5 class="card-title text-brick-red mb-2">NT $450 / 次</h5>
+                                        <h6 class="card-text text-dark-brick-red mb-4">分基礎、中級、高級可以選擇。初次至 DOYOGA
+                                            上課建議選擇此方案。
+                                        </h6>
+                                    </div>
+                                    <div class="card-footer border-0 bg-transparent p-0">
+                                        <a href="reserve-class-select.html" role="button"
+                                            class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </li>
-            <li class="col-4">
-                <div class="card rounded-lg course-card">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">短期體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $1800 / 月</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
-                        </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" role="button"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="col-4">
-                <div class="card rounded-lg course-card">
-                    <img class="card-img-top card-img bg-cover d-block"
-                        style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
-                    <div class="card-body p-4 d-flex flex-column justify-content-between">
-                        <div class="card-word">
-                            <h5 class="card-title text-dark-brick-red text-center">長期體驗</h5>
-                            <h5 class="card-title text-brick-red text-center">NT $5600 / 季</h5>
-                            <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
-                        </div>
-                        <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" role="button"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
+            </div>
+        </div>
         <div class="card card-body border-0 p-0">
             <div class="row">
                 <div class="col-4 text-center">
@@ -84,7 +115,7 @@ current: index
             </div>
             <div class="bg-dark-brick-red px-7 pb-9 mb-7">
                 <h3 class="text-white text-center mt-7 mb-6" data-aos="fade-up">選擇課程階級</h3>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col" data-aos="fade-up">
                         <a href="#">
                             <div class="card bg-dark-brick-red border-0">
@@ -155,26 +186,15 @@ current: index
                             </div>
                         </a>
                     </div>
-                </div>
-            </div>
-            <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-            <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
-        </div>
-        <!-- <div class="collapse" id="collapseExample2">
-            <div class="card card-body border-0 p-0">
-                <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4 text-center">
-                        <h6 class="text-dark-brick-red py-6"><i class="fas fa-sort-down"></i></h6>
-                    </div>
-                </div>
-                <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                    <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
-                    <div class="row">
-                        <div class="col">
+                </div> -->
+                <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events">
+                    <div class="swiper-wrapper m-0" id="swiper-wrapper-b8818035c4b101a4f" aria-live="polite">
+                        <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 3"
+                            style="width: 360px; margin-right: 30px;" data-aos="fade-up">
                             <a href="#">
                                 <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
+                                    <div
+                                        class="card-body bg-brick-red text-white rounded-lg p-4 border border-white border-4">
                                         <div class="d-flex justify-content-between">
                                             <h3 class="card-title">基礎 Basic
                                             </h3>
@@ -194,14 +214,15 @@ current: index
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 3"
+                            style="width: 360px; margin-right: 30px;" data-aos="fade-up" data-aos-delay="200">
                             <a href="#">
                                 <div class="card bg-dark-brick-red border-0">
                                     <div class="card-body bg-brick-red text-white rounded-lg p-4">
                                         <div class="d-flex justify-content-between">
                                             <h3 class="card-title">中階 Intermediate
                                             </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
+                                            <h3><i class="far fa-check-circle text-white-50"></i></h3>
                                         </div>
                                         <div class="d-flex align-items-baseline mb-3">
                                             <h6 class="me-2">艾揚格、哈達、寰宇</h6>
@@ -217,14 +238,15 @@ current: index
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="swiper-slide" role="group" aria-label="3 / 3"
+                            style="width: 360px; margin-right: 30px;" data-aos="fade-up" data-aos-delay="400">
                             <a href="#">
                                 <div class="card bg-dark-brick-red border-0">
                                     <div class="card-body bg-brick-red text-white rounded-lg p-4">
                                         <div class="d-flex justify-content-between">
                                             <h3 class="card-title">高階 Advanced
                                             </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
+                                            <h3><i class="far fa-check-circle text-white-50"></i></h3>
                                         </div>
                                         <div class="d-flex align-items-baseline mb-3">
                                             <h6 class="me-2">阿斯坦加、陰陽</h6>
@@ -242,90 +264,10 @@ current: index
                         </div>
                     </div>
                 </div>
-                <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-                <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
             </div>
+            <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
+            <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
         </div>
-        <div class="collapse" id="collapseExample3">
-            <div class="card card-body border-0 p-0">
-                <div class="row">
-                    <div class="col-8"></div>
-                    <div class="col-4 text-center">
-                        <h6 class="text-dark-brick-red py-6"><i class="fas fa-sort-down"></i></h6>
-                    </div>
-                </div>
-                <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                    <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
-                    <div class="row">
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">基礎 Basic
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">基礎課程</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・入體位法動作解說</li>
-                                        <li class="mb-1">・瑜珈基礎動作、順位</li>
-                                        <li class="mb-1">・適合任何階段練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">中階 Intermediate
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">艾揚格、哈達、寰宇</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・刺激身體七個層次為核心</li>
-                                        <li class="mb-1">・結合流暢體位法練習、呼吸、觀想</li>
-                                        <li class="mb-1">・適合半年以上練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">高階 Advanced
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">阿斯坦加、陰陽</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・充分打開身體每個部位</li>
-                                        <li class="mb-1">・顯著提升力量與柔軟度</li>
-                                        <li class="mb-1">・適合一年以上練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-                <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
-            </div>
-        </div> -->
     </div>
 </div>
 
